--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: pushDocs
 
 on:
-  // 配置当push进入什么分支的时候执行
   push:
     branches: 
      - master
@@ -13,30 +12,30 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-     // 具体的执行步骤
+     # 具体的执行步骤
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         uses: actions/checkout@main
 
-     // 使用的node版本   
+     # 使用的node版本   
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@main
         with:
           node-version:  ${{ matrix.node }}
       
-		// 执行安装
+		# 执行安装
       - name: Install dependencies
         run: pnpm i
     
-    // 执行打包
+    # 执行打包
       - name: Build VuePress
         run: pnpm docs:build
       
-    // 执行部署
+    # 执行部署
       - name: Deploy to Pages
         run: |
-          cd docs/.vitepress/dist 
+          cd docs/.vitepress/dist
           git init
           git config user.name "Aresnine"
           git config user.email "${{ secrets.GIT_EMAIL }}"
