--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
         with:
           node-version:  ${{ matrix.node }}
       - name: Install dependencies
-        run: npm install
+        run: ppm i
       - name: Build VitePress
-        run: npm run docs:build
+        run: pnpm run docs:build
       - name: Deploy to Pages
         env:
          TZ: Asia/Shanghai
