fix: 解决无法使用pnpm问题

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/setup-node@main
         with:
           node-version:  ${{ matrix.node }}
+      - name: Install pnpm
+        run: npm i pnpm
       - name: Install dependencies
         run: pnpm i
       - name: Build VitePress
