test； add test04

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,12 @@ jobs:
         uses: actions/setup-node@main
         with:
           node-version:  ${{ matrix.node }}
+      - name: Install pnpm
+        run: npm install pnpm
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
       - name: Build VitePress
-        run: npm run docs:build
+        run: pnpm run docs:build
       - name: Deploy to Pages
         env:
          TZ: Asia/Shanghai
