--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
           cd docs/.vitepress/dist
           git init
           git config user.name "Aresnine"
-          git config user.email "${ secrets.GIT_EMAIL }"
-          git add .
+          git config user.email "${{ secrets.GIT_EMAIL }}"
+          git add A
           git commit -m 'Deploying to gh-pages from @ $GITHUB_SHA in $(date +"%Y年%m月%d日 %T %Z")'
-          git push -f    https://Aresnine:${secrets.ACCESS_TOKEN }@github.com/Aresnine/Aresnine.github.io.git
+          git push -f https://Aresnine:${{secrets.ACCESS_TOKEN }}@github.com/Aresnine/Aresnine.github.io.git master
           cd -
