--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
           git config user.email "${{ secrets.GIT_EMAIL }}"
           git add .
           git commit -m 'Deploying to gh-pages from @ $GITHUB_SHA in $(date +"%Y年%m月%d日 %T %Z")'
-          git push -f https://Aresnine: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@github.com/Aresnine/Aresnine.github.io.git master
+          git push -f https://Aresnine:${{secrets.ACCESS_TOKEN }}@github.com/Aresnine/Aresnine.github.io.git master
           cd -
