--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,6 @@ jobs:
           git config user.email "${{ secrets.GIT_EMAIL }}"
           git add .
           git commit -m 'Deploying to gh-pages from @ $GITHUB_SHA in $(date +"%Y年%m月%d日 %T %Z")'
-          git push -f https://Aresnine:${{secrets.ACCESS_TOKEN }}@github.com/Aresnine/Aresnine.github.io.git master
+          git remote set-url origin https://${{secrets.ACCESS_TOKEN }}@github.com/Aresnine/Aresnine.github.io.git 
+          git push 
           cd -
