--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
           git add .
           git commit -m 'Deploying to gh-pages from @ $GITHUB_SHA in $(date +"%Y年%m月%d日 %T %Z")'
          
-          git push -f https://763555000@qq.com:${{secrets.ACCESS_TOKEN }}@github.com/Aresnine/Aresnine.github.io.git master
+          git push -f https://763555000@qq.com:${{secrets.ACCESS_TOKEN }}@github.com/Aresnine/Aresnine.github.io.git master:master
           cd -
