--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,5 @@ jobs:
           git commit -m 'Deploying to gh-pages from @ $GITHUB_SHA in $(date +"%Y年%m月%d日 %T %Z")'
          
           git push -f https://Aresnine:${{secrets.ACCESS_TOKEN }}@github.com/Aresnine/Aresnine.github.io.git master:master
-          git push -f https://Aresnine:${{secrets.GITEE_ACCESS_TOKEN }}@gitee.com/Aresnine/blogdist.git master:master
+          git push -f https://Aresnine:${{secrets.GITEE_ACCESS_TOKEN }}@gitee.com/Aresnine/aresnine.gitee.io.git master:master
           cd -
