--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['lts/fermium']
+        node: ['16.16']
     steps:
       - name: Checkout
         uses: actions/checkout@main
