--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
         env:
           TZ: Asia/Shanghai
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 
         uses: actions/setup-node@main
         with:
           node-version:  ${{ matrix.node }}
